New: Artilce search page created

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <div class="container">
+        <form method="GET" class="mt-4">
+            <input name="q" placeholder="Search..." type="text">
+            <input type="submit">
+        </form>
         {% block content %} {% endblock %}
     </div>
 </body>
