--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -14,17 +14,15 @@
                     <a class="nav-link active" id="home-vertical-tab" data-toggle="tab" href="#home-vertical" role="tab"
                        aria-controls="home" aria-selected="true">Hello, I'm {{ request.user.username }}</a>
                 </li>
-                {% if request.use.is_superuser or request.user.is_staff %}
-                    <li class="nav-item">
-                        <a class="nav-link" id="profile-vertical-tab" data-toggle="tab" href="#profile-vertical"
-                           role="tab"
-                           aria-controls="profile" aria-selected="false">My Bio</a>
-                    </li>
-                {% endif %}
+                <li class="nav-item">
+                    <a class="nav-link" id="profile-vertical-tab" data-toggle="tab" href="#profile-vertical"
+                       role="tab"
+                       aria-controls="profile" aria-selected="false">My Bio</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" id="order" data-toggle="tab" href="#orders"
                        role="tab"
-                       aria-controls="contact" aria-selected="false">My Orders</a>
+                       aria-controls="contact" aria-selected="false">Other Information</a>
                 </li>
             </ul>
             <div class="tab-content" id="myTabContent3">
@@ -32,26 +30,32 @@
                      aria-labelledby="home-vertical-tab">
                     {% if request.user.first_name %} <p>First Name: {{ request.user.first_name }} </p> {% endif %}
                     {% if request.user.last_name %}  <p>Last Name: {{ request.user.last_name }}  </p>{% endif %}
-                    {% if request.user.first_name or  request.user.lastname %}  <p>Full Name:
-                        {{ request.user.first_name }}
-                        {{ request.user.last_name }}</p> {% endif %}
+                    {% if profile_ctx.make_full_name %}  <p>Full Name:
+                        {{ profile_ctx.make_full_name }}</p> {% endif %}
+                    <p>NID: {{ request.user.nid_number }}</p>
                     {% if request.user.phone_number %}<p>Phone Number: {{ request.user.phone_number }}</p> {% endif %}
                     {% if request.user.email %} <p>Email Address: {{ request.user.email }}</p> {% endif %}
                     {% if request.user.address %} <p>Email Address: {{ request.user.address }}</p> {% endif %}
                     {% if request.user.last_login %} <p>Last Login: {{ request.user.last_login }}  </p> {% endif %}
                 </div>
                 <div class="tab-pane fade" id="profile-vertical" role="tabpanel" aria-labelledby="profile-vertical-tab">
-                    <h3>No Bio Found</h3>
-                    <p>Nullam et tellus ac ligula condimentum sodales. Aenean tincidunt viverra suscipit. Maecenas id
-                        molestie est, a commodo nisi. Quisque fringilla turpis nec elit eleifend vestibulum. Aliquam sed
-                        purus in odio ullamcorper congue consectetur in neque. Aenean sem ex, tempor et auctor sed,
-                        congue id neque. </p>
-                    <p> Fusce a eros pellentesque, ultricies urna nec, consectetur dolor. Nam dapibus scelerisque risus,
-                        a commodo mi tempus eu.</p>
+                    <h3>Secondary Information</h3>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <p>Address: {{ profile_ctx.address }}</p>
+                            <p>Word Number: {{ profile_ctx.word_number }}</p>
+                            <p>Union: {{ profile_ctx.union }}</p>
+                            <p>Date Of Birth: {{ profile_ctx.birth_date }}</p>
+                            <p>Current Age: {{ profile_ctx.current_age }} Days</p>
+                        </div>
+                        <div class="col-md-6">
+                            <img src="{{ profile_ctx.profile_picture }}" alt="{{ request.user.username }}">
+                        </div>
+                    </div>
                 </div>
                 <div class="tab-pane fade" id="orders" role="tabpanel" aria-labelledby="order">
                     <div class="card">
-                        <h5 class="card-header">My Recent Order List</h5>
+                        <h5 class="card-header">Others</h5>
                         <div class="card-body">
                             {% if order_list %}
                                 <table class="table table-bordered">
@@ -78,7 +82,7 @@
                                     {% endfor %}
                                     </tbody>
                                 </table>
-                                {% else %}
+                            {% else %}
                                 <p>No order yet!</p>
                             {% endif %}
                         </div>
