New: Nomination and symbol created

--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -83,7 +83,7 @@
                                     </tbody>
                                 </table>
                             {% else %}
-                                <p>No order yet!</p>
+                                <p>No nomination yet!</p>
                             {% endif %}
                         </div>
                     </div>
