--- a/app/templates/user/signup.html
+++ b/app/templates/user/signup.html
@@ -7,6 +7,9 @@
 
     <div class="card">
         <div class="card-header text-center">
+            {% if form.errors %}
+                <p class="alert alert-danger" role="alert">{{ form.errors }}</p>
+            {% endif %}
             <h3 class="mb-1">Register My Account</h3>
         </div>
         <div class="card-body">
@@ -18,7 +21,7 @@
                 <div class="form-group">
                     {{ form.phone_number }}
                 </div>
-                 <div class="form-group">
+                <div class="form-group">
                     {{ form.nid_number }}
                 </div>
                 <div class="form-group">
