--- a/app/templates/nomination/nomination_list.html
+++ b/app/templates/nomination/nomination_list.html
@@ -11,7 +11,8 @@
         <!-- start table -->
         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
             <div class="card">
-                <h5 class="card-header">{% if request.user.is_superuser %} List of nomination {% else %} My nomination list {% endif %}</h5>
+                <h5 class="card-header">{% if request.user.is_superuser %} List of nomination {% else %} My nomination
+                    list {% endif %}</h5>
                 <div class="card-body">
                     {% if nomination %}
                         <table class="table table-bordered">
@@ -22,6 +23,7 @@
                                 <th>Profession</th>
                                 <th class="text-center">Status</th>
                                 <th>Created Date</th>
+                                <th class="text-center">Actions</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -31,15 +33,33 @@
                                     <td>{{ obj.candidate }}</td>
                                     <td>{{ obj.qualification }}</td>
                                     <td>{{ obj.profession }}</td>
-                                    <td align="center">{% if obj.status == True %} <span style="padding: 5px; border-radius: 6px" class="btn-success">Approve</span> {% else %} <span style="padding: 5px; border-radius: 6px" class="btn-danger">Pending</span> {% endif %}</td>
+                                    <td align="center">{% if obj.status == True %}
+                                        <span style="padding: 5px; border-radius: 6px"
+                                              class="btn-success">Approve</span> {% else %}
+                                        <span style="padding: 5px; border-radius: 6px"
+                                              class="btn-danger">Pending</span> {% endif %}</td>
                                     <td>{{ obj.created_at }}</td>
+                                    <td align="center">
+                                        <a title="Details the candidates" style="margin-right: 5px"
+                                           class="btn-sm btn-success" href="{% url 'candidates_details' obj.id %}">
+                                            <i class="fa fa-eye"></i>
+                                        </a>
+                                        <a title="Update the candidates" style="margin-right: 5px"
+                                           class="btn-sm btn-success" href="">
+                                            <i class="fa fa-pen-square"></i>
+                                        </a>
+                                        <a title="Delete the candidates" class="btn-sm btn-danger" href="#">
+                                            <i class="fa fa-trash"></i>
+                                        </a>
+                                    </td>
                                 </tr>
                             {% endfor %}
                             </tbody>
                         </table>
                     {% else %}
                         <h3 class="text-center text-danger">
-                        {% if request.user.is_superuser %} Sorry! No Candidate Found. {% else %} Please wait... {% endif %}
+                            {% if request.user.is_superuser %} Sorry! No Candidate Found. {% else %} Please
+                                wait... {% endif %}
                         </h3>
                     {% endif %}
                     <!-- pagination -->
