New: Members updated done

--- a/app/templates/nomination/nomination_list.html
+++ b/app/templates/nomination/nomination_list.html
@@ -45,7 +45,7 @@
                                             <i class="fa fa-eye"></i>
                                         </a>
                                         <a title="Update the candidates" style="margin-right: 5px"
-                                           class="btn-sm btn-success" href="">
+                                           class="btn-sm btn-success" href="{% url 'candidates_update' obj.id %}">
                                             <i class="fa fa-pen-square"></i>
                                         </a>
                                         <a title="Delete the candidates" class="btn-sm btn-danger" href="#">
