--- a/app/templates/nomination/candidates_list.html
+++ b/app/templates/nomination/candidates_list.html
@@ -11,7 +11,8 @@
         <!-- start table -->
         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
             <div class="card">
-                <h5 class="card-header">{% if request.user.is_superuser %} List of nomination {% else %} My nomination list {% endif %}</h5>
+                <h5 class="card-header">{% if request.user.is_superuser %} List of nomination {% else %} My nomination
+                    list {% endif %}</h5>
                 <div class="card-body">
                     {% if nomination %}
                         <table class="table table-bordered">
@@ -35,11 +36,13 @@
                                     <td>{{ obj.phone_number }}</td>
                                     <td>{{ obj.created_at }}</td>
                                     <td align="center">
-                                        <a title="Details the candidates" style="margin-right: 5px" class="btn-sm btn-success" href="{% url 'candidates_details' obj.id %}">
+                                        <a title="Details the candidates" style="margin-right: 5px"
+                                           class="btn-sm btn-success" href="{% url 'candidates_details' obj.id %}">
                                             <i class="fa fa-eye"></i>
                                         </a>
-                                        <a title="Update the candidates" style="margin-right: 5px" class="btn-sm btn-success" href="">
-                                           <i class="fa fa-pen-square"></i>
+                                        <a title="Update the candidates" style="margin-right: 5px"
+                                           class="btn-sm btn-success" href="{% url 'candidates_update' obj.id %}">
+                                            <i class="fa fa-pen-square"></i>
                                         </a>
                                         <a title="Delete the candidates" class="btn-sm btn-danger" href="#">
                                             <i class="fa fa-trash"></i>
@@ -51,7 +54,8 @@
                         </table>
                     {% else %}
                         <h3 class="text-center text-danger">
-                        {% if not request.user.is_superuser %} Sorry! No Candidate Found. {% else %} Please wait... {% endif %}
+                            {% if not request.user.is_superuser %} Sorry! No Candidate Found. {% else %} Please
+                                wait... {% endif %}
                         </h3>
                     {% endif %}
                     <!-- pagination -->
