--- a/app/templates/symbol/symbol.html
+++ b/app/templates/symbol/symbol.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} Add & List of symbol || Service24{% endblock %}
+{% block title %} Add & List of symbol || Election{% endblock %}
 
 
 {% block content %}
@@ -17,14 +17,7 @@
 
         <div class="col-lg-12 mb-3">
             <div class="row">
-                <div class="col-lg-3">
-                    <form method="POST">
-                        <div class="input-group input-group-sm">
-                            <input name="category" placeholder="Search..." type="text" class="form-control"/>
-                            <button id="searchBtn" type="button" class="btn btn-primary btn-flat btn-sm">Search</button>
-                        </div>
-                    </form>
-                </div>
+                <div class="col-lg-3"></div>
                 <div class="col-lg-9 text-right">
                     {% if user.is_superuser %}
                         <button type="button" data-backdrop="static" data-keyboard="false"
@@ -55,7 +48,7 @@
                             {% for obj in symbol %}
                                 <tr>
                                     <td>{{ obj.name }}</td>
-                                    <td><img src="{{ obj.image.url }}" alt="{{ obj.name }}"></td>
+                                    <td class="td_symbol"><img src="{{ obj.image.url }}" alt="{{ obj.name }}"></td>
                                     <td>{{ obj.created_at }}</td>
                                     <td>{{ obj.updated_at }}</td>
                                 </tr>
@@ -86,5 +79,14 @@
         let searchBtn = document.getElementById('searchBtn')
         console.log(searchBtn);
     </script>
+    <style type="text/css">
+        .td_symbol {
+            width: 200px;
+        }
+        .td_symbol img {
+            width: 100%;
+            height: 90px;
+        }
+    </style>
 
 {% endblock %}
